<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeta2_slam_toolbox</name>
  <version>0.0.1</version>
  <description>
    zeta2 slam toolbox package
  </description>
  <license>Apache 2.0</license>
  <author email="progryu@zetabank.co.kr">lolddohaja</author>
  <maintainer email="progryu@zetabank.co.kr">lolddohaja</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
